# dcc

./: .gitignore  README.md  augment.py  augment_v2.py  augment_v3.py  copy_cleaned.py  dash_app.py  detect_duplicates.py  evaluate.py  extract_features.py  fine_tune.py  model.py  predict.py  pyproject.toml  score.py  streamlit_app.py  train.py  utils.py
experiments/: possible-tags.txt
experiments/manual-clean-aug/checkpoints/: best_model.data-00000-of-00001  best_model.index
experiments/manual-clean-aug/predictions/: predictions-val.npz  predictions-val.npz-image-paths.txt  predictions.npz  predictions.npz-image-paths.txt
experiments/original/checkpoints/: best_model.data-00000-of-00001  best_model.index  imagenet-finetuned.data-00000-of-00001  imagenet-finetuned.index
experiments/original/data/test/ii/: meta-data.json
experiments/original/predictions/: predictions-finetuned.npz  predictions-finetuned.npz-image-paths.txt  predictions-val.npz  predictions-val.npz-image-paths.txt  predictions.json  predictions.npz
experiments/tool-iter-01/checkpoints/: best_model.data-00000-of-00001  best_model.index  checkpoint  imagenet-finetuned.data-00000-of-00001  imagenet-finetuned.index
experiments/tool-iter-01/predictions/: predictions-finetuned.npz  predictions-finetuned.npz-image-paths.txt  predictions.npz
notebooks/: 01-error-analysis.ipynb  02-surf.ipynb  03-image-resize.ipynb  04-first-attempt-clean-lab.ipynb  05-cleanlab-train-from-scratch.ipynb  06-cleanlab-validation-set.ipynb  07-error-analysis-take-2.ipynb  09-pca.ipynb  10-clustering.ipynb
(+31 files in other folders)
