[tool.poetry]
name = "dcc"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
tensorflow = "2.5.0"
opencv-python = "^4.5.2"
jupyterlab = "^3.0.16"
click = "^7"
tqdm = "^4.62.1"
ipywidgets = "^7.6.3"
jupyterlab-widgets = "^1.0.0"
cleanlab = "^1.0"
umap-learn = "^0.5.1"
jupyter-dash = "^0.4.0"
streamlit = "^0.87.0"
streamlit-tags = "^1.2.8"
ImageHash = "^4.2.1"
imgaug = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
